ndr_learner consolidation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,9 @@ export(causalDML)
 export(clan)
 export(create_method)
 export(kr_cate)
+export(ndr_core)
 export(ndr_learner)
-export(ndr_learner_cate)
+export(ndr_oos)
 export(norm_drl)
 export(nuisance_dss_e)
 export(nuisance_dss_m)
