Fix cates with binary treatment

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,6 @@
 
 S3method(plot,APO_dml)
 S3method(plot,kr_cate)
-S3method(summary,APO_dml)
-S3method(summary,ATE_dml)
 export(APO_dml)
 export(APO_dml_atet)
 export(ATE_dml)
@@ -21,6 +19,9 @@ export(nuisance_e)
 export(nuisance_m)
 export(prep_cf_mat)
 export(prep_w_mat)
+export(summary.APO_dml)
+export(summary.ATE_dml)
+import(Matrix)
 import(ggplot2)
 import(glmnet)
 import(grf)
