--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,11 @@
 
 S3method(plot,APO_dml)
 S3method(plot,kr_cate)
+S3method(plot,plasso)
+S3method(predict,plasso)
 S3method(summary,APO_dml)
 S3method(summary,ATE_dml)
+S3method(summary,plasso)
 export(APO_dml)
 export(APO_dml_atet)
 export(ATE_dml)
@@ -19,6 +22,7 @@ export(nuisance_dss_e)
 export(nuisance_dss_m)
 export(nuisance_e)
 export(nuisance_m)
+export(plasso)
 export(prep_cf_mat)
 export(prep_w_mat)
 import(ggplot2)
