Add partially linear estimation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,12 @@ S3method(plot,plasso)
 S3method(predict,plasso)
 S3method(summary,APO_dml)
 S3method(summary,ATE_dml)
+S3method(summary,DML_partial_linear)
 S3method(summary,plasso)
 export(APO_dml)
 export(APO_dml_atet)
 export(ATE_dml)
+export(DML_partial_linear)
 export(causalDML)
 export(clan)
 export(create_method)
