Intro of DML_aipw as successor of causalDML function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(summary,plasso)
 export(APO_dml)
 export(APO_dml_atet)
 export(ATE_dml)
+export(DML_aipw)
 export(DML_partial_linear)
 export(causalDML)
 export(clan)
