Add plain DR-learner

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,9 @@ export(DML_partial_linear)
 export(causalDML)
 export(clan)
 export(create_method)
+export(dr_core)
+export(dr_learner)
+export(dr_oos)
 export(kr_cate)
 export(ndr_core)
 export(ndr_learner)
