Add spline regression for CATEs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,APO_dml)
 S3method(plot,kr_cate)
 S3method(plot,plasso)
+S3method(plot,spline_cate)
 S3method(predict,plasso)
 S3method(summary,APO_dml)
 S3method(summary,ATE_dml)
@@ -31,6 +32,8 @@ export(nuisance_m)
 export(plasso)
 export(prep_cf_mat)
 export(prep_w_mat)
+export(spline_cate)
+import(crs)
 import(ggplot2)
 import(glmnet)
 import(grf)
